# SonyHeadphonesClient

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  command_serializer.py  constants.py
.github/workflows/: cmake.yml  release.yml  xcodebuild.yml
Client/: BluetoothWrapper.cpp  BluetoothWrapper.h  ByteMagic.cpp  ByteMagic.h  CMakeLists.txt  CMakeSettings.json  CascadiaCodeFont.cpp  CascadiaCodeFont.h  Client.cpp  Client.sln  Client.vcxproj  Client.vcxproj.filters  CommandSerializer.cpp  CommandSerializer.h  Constants.h  CrossPlatformGUI.cpp  CrossPlatformGUI.h  Exceptions.h  Headphones.cpp  Headphones.h  IBluetoothConnector.h  Listener.cpp  Listener.h  RecoverableException.h  SingleInstanceFuture.h  TimedMessageQueue.cpp  TimedMessageQueue.h  WindowsBluetoothConnector.cpp  WindowsBluetoothConnector.h  imgui.ini
Client/Fonts/: encodeFont.py
Client/GUI_Impls/: CrossPlatformGUI.cpp  CrossPlatformGUI.h  LinuxGUI.cpp  LinuxGUI.h  MacOSGUI.h  MacOSGUI.mm  WindowsGUI.cpp  WindowsGUI.h
Client/linux/: DBusHelper.cpp  DBusHelper.h  LinuxBluetoothConnector.cpp  LinuxBluetoothConnector.h  LinuxGUI.cpp  Makefile  main.cpp
Client/macos/: .clang-format  AppDelegate.h  AppDelegate.m  AppDelegate.mm  MacOSBluetoothConnector.h  MacOSBluetoothConnector.mm  MacOSGUI.cpp  MacOSGUI.h  Main.storyboard  TMacOSBluetoothConnector.h  ViewController.h  ViewController.m  ViewController.mm  info.plist  main.mm  makefile
Client/macos/SonyHeadphonesClient.xcodeproj/: project.pbxproj
Client/macos/SonyHeadphonesClient.xcodeproj/project.xcworkspace/xcuserdata/semvi.xcuserdatad/: UserInterfaceState.xcuserstate
Client/macos/SonyHeadphonesClient.xcodeproj/xcuserdata/semvi.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Client/macos/SonyHeadphonesClient.xcodeproj/xcuserdata/semvi.xcuserdatad/xcschemes/: xcschememanagement.plist
Client/qt/: CMakeLists.txt  Dialog.cpp  Dialog.h  dialog.ui  main.cpp
Client/windows/: WindowsGUI.h  main.cpp
static/: showcase.webm
